# system-stats-dashboard

./: Cargo.toml  README-EN.md  README.md
src/: dashboard_context.rs  error_context.rs  main.rs  stats.rs  stats_history.rs
