[package]
name = "system-stats-dashboard"
version = "0.3.0"
authors = ["wuaq"]
edition = "2021"

[dependencies]
systemstat = "0.2.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }